# sitemaps

./: Cargo.toml  README.md  TODO.md
sitemaps/: Cargo.toml  README.md
sitemaps-cli/: Cargo.toml  README.md
sitemaps-cli/src/: cli.rs  main.rs  utils.rs
sitemaps-cli/tests/: cli.rs
sitemaps-cli/tests/expected/: example_1_url.csv  example_1_url.json  example_1_url.txt  example_2_url.csv  example_2_url.json  example_2_url.txt  sitemap.csv  sitemap.json  sitemap.txt  sitemap_index.csv  sitemap_index.json  sitemap_index.txt
sitemaps-cli/tests/inputs/: sitemap.xml
sitemaps/src/: error.rs  lib.rs  reader.rs  siteindex.rs  sitemap.rs  sitemap_index.rs  w3c_datetime.rs
sitemaps/tests/: read.rs  siteindex.rs  sitemap.rs  sitemap_index_read.rs  sitemap_index_write.rs  sitemap_read.rs  sitemap_write.rs  sitemaps_file.rs  sitemaps_read.rs  write.rs
sitemaps/tests/data/: example_2_url.xml
