[package]
name = "sitemaps-cli"
version = "0.1.0"
edition = "2021"
default-run = "sitemaps"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
sitemaps = { path = "../sitemaps" }
comfy-table = "7.1.0"
tabwriter = "1.4.0"
serde_json = "1.0"
csv = "1.3.0"

[dev-dependencies]
assert_cmd = "2.0.14"

[[bin]]
name = "sitemaps"
path = "src/main.rs"

