[package]
name = "sitemaps-cli"
version = "0.1.0"
edition = "2021"
default-run = "sitemaps"
authors = ["William Blackerby <wmblackerby@gmail.com"]
description = "CLI for working with Sitemaps as data"
repository = "https://github.com/blackerby/sitemaps-rs"
homepage = "https://github.com/blackerby/sitemaps-rs"
license = "MIT"
keywords = ["sitemaps", "sitemap", "data", "cli", "xml"]
rust-version = "1.61.0"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
sitemaps = { path = "../sitemaps", version = "0.1.0" }
comfy-table = "7.1.0"
tabwriter = "1.4.0"
serde_json = "1.0"
csv = "1.3.0"

[dev-dependencies]
assert_cmd = "2.0.14"

[[bin]]
name = "sitemaps"
path = "src/main.rs"

