[package]
name = "sitemaps"
version = "0.1.0"
edition = "2021"
authors = ["William Blackerby <wmblackerby@gmail.com"]
description = "Read and write files in the Sitemaps XML format"
respository = "https://github.com/blackerby/sitemaps-rs"
license = "MIT"
keywords = ["sitemaps", "sitemap", "sitemapindex", "reader", "parser", "xml"]

[dependencies]
chrono = {version = "0.4.34", features = ["alloc", "serde"] }
quick-xml = "0.31.0"
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.58"

[dev-dependencies]
ureq = "2.9.6"
